It completes the front en for working with dogs

--- a/index.html
+++ b/index.html
@@ -1,36 +1,26 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Grooming System</title>
+    <title>Welcome to the Dog Grooming "The Mad House"</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Dog Grooming System</h1>
-
-    <section id="owner-section">
-        <h2>Owner</h2>
-        <form id="owner-form">
-            <input type="text" id="ownerPhone" placeholder="Owner Phone">
-            <input type="text" id="ownerName" placeholder="Owner Name">
-            <button type="button" onclick="addOwner()">Add Owner</button>
-        </form>
-        <div id="owners-list"></div>
-    </section>
-
-    <section id="dog-section">
-        <h2>Dog</h2>
-        <form id="dog-form">
-            <input type="text" id="dogName" placeholder="Dog Name">
-            <input type="text" id="dogBreed" placeholder="Dog Breed">
-            <input type="text" id="ownerPhoneForDog" placeholder="Owner Phone">
-            <button type="button" onclick="addDog()">Add Dog</button>
-        </form>
-        <div id="dogs-list"></div>
-    </section>
-
-    <script src="js/script.js"></script>
+    <div class="welcome-container">
+        <h1>Welcome to the Dog Grooming "The Mad House"</h1>
+        <p>Select and oppcion to begin:</p>
+        <div class="buttons-container">
+            <a href="owner.html" class="button owner-button">
+                <span>Owners</span>
+            </a>
+            <a href="dogs.html" class="button dogs-button">
+                <span>Dogs</span>
+            </a>
+            <a href="appointments.html" class="button appointments-button">
+                <span>Appointments</span>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
